# turbo-ocr

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md
docker/: Dockerfile.cpu  Dockerfile.gpu  docker-compose.yml  nginx.conf.template
models/: det.onnx  rec.onnx
models/v5_latin_rec/: calibration_rec.cache
proto/: ocr.proto
quantization/: Dockerfile.qat  README.md  requirements.txt
quantization/configs/: qat_latin_rec.yml
quantization/data/: train_list.txt  val_list.txt
quantization/scripts/: download_dataset.py  download_pretrained.sh  patch_nrtr.py  quantize_onnx_int8.py  run_qat.sh  run_qat_docker.sh
scripts/: bench_full.sh  bench_latency.sh  bench_throughput.sh  convert_onnx_to_trt.py  download_models.sh  entrypoint.sh  export_pp_doclayoutv3.py  install_fastpdf2png.sh  install_native.sh  prepare_cpu_models.py  validate_accuracy.py
src/classification/: cpu_paddle_cls.cpp  paddle_cls.cpp
src/decode/: fast_png_decoder.cpp
src/detection/: cpu_paddle_det.cpp  det_postprocess.cpp  paddle_det.cpp
src/engine/: cpu_engine.cpp  onnx_to_trt.cpp  trt_engine.cpp
src/kernels/: kernels.cu
src/layout/: child_blocks.cpp  cpu_paddle_layout.cpp  match_unsorted.cpp  paddle_layout.cpp  reading_order.cpp  text_line_cluster.cpp
src/pdf/: pdf_text_layer.cpp
tests/: README.md  TESTING_GUIDE.md  conftest.py  pytest.ini  requirements.txt  run_all.py
tests/cpp/: CMakeLists.txt  test_box.cpp  test_ctc_decode.cpp  test_det_postprocess.cpp  test_encoding.cpp  test_image_dims.cpp  test_logger_ratelimit.cpp  test_perspective.cpp  test_serialization.cpp  test_xy_cut.cpp
tools/: grpc_bench.cpp  grpc_burst.cpp
(+169 files in other folders)
